--- a/friends-startup-ideas-app/package.json
+++ b/friends-startup-ideas-app/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "formidable": "^3.5.0",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
